--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "plugin-stats-server",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
-  "main": "index.js",
+  "module": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
@@ -15,6 +15,9 @@
   "devDependencies": {
     "@types/node": "^18.11.18",
     "typescript": "^4.9.4"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
     "@fastify/rate-limit": "^7.6.0",
